--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^1.0.2",
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
@@ -17,7 +18,6 @@
     "node-google-text-to-speech": "^0.1.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "password-hash": "^1.2.2",
     "serve-favicon": "~2.4.2"
   }
 }
